# ME433_AdvancedMechatronics

./: HW16 - Shortcut.lnk
HW1/: text.txt
HW10/: CMakeLists.txt  main.c  main.py  visualizer.py
HW11/: CMakeLists.txt  main.c  main_stm.c
HW11/HW11_STM/: .cproject  .project  HW11_STM.ioc
HW11/HW11_STM/.metadata/: .log4j2.xml  version.ini
HW11/HW11_STM/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
HW11/HW11_STM/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
HW11/HW11_STM/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
HW11/HW11_STM/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
HW11/HW11_STM/Debug/: HW11_STM.elf  HW11_STM.list  HW11_STM.map  makefile
HW11/HW11_STM/Debug/Core/Src/: main.cyclo  main.su
HW15/: main.c  wiring.txt
HW16/: main.c  main_stm_helper.c  plot.py
HW16/HW16_STM/FDCAN_Com_Polling/: .mxproject  FDCAN_Com_Polling.ioc
HW16/HW16_STM/FDCAN_Com_Polling/Inc/: main.h  stm32c0xx_hal_conf.h  stm32c0xx_it.h
HW16/HW16_STM/FDCAN_Com_Polling/STM32CubeIDE/: .cproject  .project  FDCAN_Com_Polling Debug.launch
HW16/HW16_STM/FDCAN_Com_Polling/STM32CubeIDE/Debug/: FDCAN_Com_Polling.elf  FDCAN_Com_Polling.list  FDCAN_Com_Polling.map  makefile
HW16/HW16_STM/FDCAN_Com_Polling/STM32CubeIDE/Debug/Application/User/: main.cyclo  main.d  main.su  stm32c0xx_hal_msp.cyclo  stm32c0xx_hal_msp.d  stm32c0xx_hal_msp.su  stm32c0xx_it.cyclo  stm32c0xx_it.d  stm32c0xx_it.su  subdir.mk
HW16/HW16_STM/FDCAN_Com_Polling/STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  system_stm32c0xx.cyclo  system_stm32c0xx.d  system_stm32c0xx.su
HW16/HW16_STM/FDCAN_Com_Polling/STM32CubeIDE/Debug/Drivers/STM32C0xx_HAL_Driver/: stm32c0xx_hal.cyclo  stm32c0xx_hal.d  stm32c0xx_hal.su  stm32c0xx_hal_adc.cyclo  stm32c0xx_hal_adc.d  stm32c0xx_hal_adc.su  stm32c0xx_hal_adc_ex.cyclo  stm32c0xx_hal_adc_ex.d  stm32c0xx_hal_adc_ex.su  stm32c0xx_hal_cortex.cyclo  stm32c0xx_hal_cortex.d  stm32c0xx_hal_cortex.su  stm32c0xx_hal_dma.cyclo  stm32c0xx_hal_dma.d  (+52 more)
HW16/HW16_STM/FDCAN_Com_Polling/Src/: main.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c
HW17/: CMakeLists.txt  main.c  plot.py  visualize_magnet.py  wiring.txt
HW18/: main.c  plot.py
HW18/Force Diagrams/: README.txt  plot.py  visualize_haptic.py
HW2/: CMakeLists.txt  HW2.c  code.py
HW3/: CMakeLists.txt  main.c
HW4/: CMakeLists.txt  main.c  ssd1306.c
HW5/: CMakeLists.txt  font.h  main.c  mpu6050.c  mpu6050.h
HW6/: CMakeLists.txt  main.c  main_draft.c  mpu6050.c  mpu6050.h  tusb_config.h  usb_descriptors.c
HW7/: CMakeLists.txt  hw7_data.csv  main.c  plot_hw.py
HW8/: CMakeLists.txt  hw8_data.csv  main.c  plot_hw.py
HW9/: HW9_1.py  HW9_2.py  HW9_4_plot.py  HW9_5_plot.py  HW9_6_plot.py  HW9_7_plot.py  hw9_dsp.py
(+4 files in other folders)
